--- a/src/app/pages/bienvenido/bienvenido.page.html
+++ b/src/app/pages/bienvenido/bienvenido.page.html
@@ -1,8 +1,10 @@
 <ion-content>
     <div class="main_content_div">
         
-         
-                <img src="assets/imgs/logo1.png">
+         <div class="logo">
+            <img  src="assets/imgs/logo1.png">
+         </div>
+                
           
       
         <ion-label class="simple_lbl">¡Bienvenido a tu nueva aplicación de gestión inmobiliaria! </ion-label>
@@ -12,7 +14,7 @@
 </ion-content>
 
 <ion-footer >
-    <ion-toolbar style="padding: 10px;">
+    <ion-toolbar style="--background:  #a6a6a8;" >
         <ion-button expand="block"  (click)="goToLogin()" >
             <ion-label>Comenzar</ion-label>
         </ion-button>
