--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 ion-content {
     --background:   #7b7b83;
 }
@@ -47,7 +45,6 @@ ion-content {
         margin-bottom: 30px;
     }
 
- 
 
 }
 ion-header {
@@ -55,8 +52,10 @@ ion-header {
 }
 ion-footer{
     --background:   #7b7b83;
-=======
-.main_content_div {
+}
+
+
+/*.main_content_div {
     width: 100%;
 
     .extra_header {
@@ -169,7 +168,4 @@ ion-footer{
                     white-space: nowrap;
                 }
             }
-        }
-    }    
->>>>>>> origin/aye
-}
+        }*/
