--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -9,142 +9,156 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <div class="main_content_div">
-  <ion-card>
-    <ion-card-header>
+    <ion-card>
+      <ion-card-header>
 
-  <ion-button  (click)="bntNuevo()" color="secondary">
-    <ion-label >Nuevo</ion-label>
-     <ion-icon  name="add"></ion-icon>
-   </ion-button>
-    </ion-card-header>
-    <ion-card-content>
-       <!--contenedor de agregar-->
-   <div *ngIf="enableNewPropiedad" >
-  <ion-item>
-    
-      <ion-button slot="end" (click)="enableNewPropiedad = false " (click)="enablelista = true "  >
-     <ion-icon name="close"></ion-icon>
-  </ion-button>
+        <ion-button (click)="bntNuevo()" color="secondary">
+          <ion-label>Nuevo</ion-label>
+          <ion-icon name="add"></ion-icon>
+        </ion-button>
+      </ion-card-header>
+      <ion-card-content>
+        <!--contenedor de agregar-->
+        <div *ngIf="enableNewPropiedad">
+          <ion-item>
 
-</ion-item>
-            <ion-item>
-                <ion-label position="floating">Nombre Propiedad</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.nombre"  placeholder="casa_ejemplo" type="text" inputmode="text"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label position="floating">comuna</ion-label>
-                <ion-select [(ngModel)]="newPropiedad.comuna" label="Popover" interface="popover" placeholder="Comuna">
-                  <ion-select-option value="Santiago">Santiago</ion-select-option>
-                  <ion-select-option value="Huechuraba">Huechuraba</ion-select-option>
-                  <ion-select-option value="Independencia">Independencia</ion-select-option>
-                  <ion-select-option value="Quilicura">Quilicura</ion-select-option>
-                  <ion-select-option value="Recoleta">Recoleta</ion-select-option>
-                  <ion-select-option value="Renca">Renca</ion-select-option>
-                  <ion-select-option value="Las Condes">Las Condes</ion-select-option>
-                  <ion-select-option value="Lo Barnechea">Lo Barnechea</ion-select-option>
-                  <ion-select-option value="Providencia">Providencia</ion-select-option>
-                  <ion-select-option value="Vitacura">Vitacura</ion-select-option>
-                  <ion-select-option value="La Reina">La Reina</ion-select-option>
-                  <ion-select-option value="Macul">Macul</ion-select-option>
-                  <ion-select-option value="Conchalí">Conchalí</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <ion-item>
-          
-                <ion-label position="floating">Direccion</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.direccion"  placeholder="av. ejemplo" type="text" inputmode="text"> </ion-input>
-              </ion-item>
-                   <ion-item>
-                <ion-label position="floating">Tipo</ion-label>
-                <ion-select [(ngModel)]="newPropiedad.tipo" label="Popover" interface="popover" placeholder="Casa/depto">
-                  <ion-select-option value="casa">Casa</ion-select-option>
-                  <ion-select-option value="depto">Departamento</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <ion-item>
-                <ion-label position="floating">numero</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.numero"  placeholder="1233"type="number" inputmode="numeric"> </ion-input>
-              </ion-item>
-              
-              <ion-item>
-                <ion-label position="floating">contacto</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.contacto"  placeholder="persona ejemplo" type="text" inputmode="text"> </ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label position="floating">Telefono</ion-label>
-                <ion-input [(ngModel)]="newPropiedad.telefono"  placeholder="+569 000 000" type="tel" > </ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label >
-                  Foto
-                </ion-label>
-                <ion-buttons slot="end">
-                  <ion-button>
-                    <label for="file-upload">
-                    <ion-icon slot="icon-only" name="images-outline"></ion-icon>
-                  </label>
-                  <input (change)="newImageUpload($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
-                </ion-button>
-               </ion-buttons>
-             </ion-item>
-             <ion-item>
-              <img [src]="newPropiedad.foto">
-             </ion-item>
+            <ion-button slot="end" (click)="enableNewPropiedad = false " (click)="enablelista = true ">
+              <ion-icon name="close"></ion-icon>
+            </ion-button>
 
-             <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " color="secondary" expand="block" shape="round" >Guardar</ion-button>
-             <ion-button (click)="go()"  color="secondary" expand="block" shape="round" >Cuentas</ion-button>
-          </div>
-    <!--listas de propiedades Cascada-->
-     
-      <ion-accordion-group  *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" lines="none" >
-        <ion-accordion *ngFor="let P of Propiedades">
-          <ion-item slot="header"  color="secondary">
-            <ion-col>
-              <ion-label>{{P.nombre}}</ion-label>
-             
-            </ion-col>
-            <ion-col> 
-             <ion-label> <ion-label>{{P.contacto}}</ion-label></ion-label>
-            </ion-col> 
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Nombre Propiedad</ion-label>
+            <ion-input [(ngModel)]="newPropiedad.nombre" placeholder="casa_ejemplo" type="text" inputmode="text">
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">comuna</ion-label>
+            <ion-select [(ngModel)]="newPropiedad.comuna" label="Popover" interface="popover" placeholder="Comuna">
+              <ion-select-option value="Santiago">Santiago</ion-select-option>
+              <ion-select-option value="Huechuraba">Huechuraba</ion-select-option>
+              <ion-select-option value="Independencia">Independencia</ion-select-option>
+              <ion-select-option value="Quilicura">Quilicura</ion-select-option>
+              <ion-select-option value="Recoleta">Recoleta</ion-select-option>
+              <ion-select-option value="Renca">Renca</ion-select-option>
+              <ion-select-option value="Las Condes">Las Condes</ion-select-option>
+              <ion-select-option value="Lo Barnechea">Lo Barnechea</ion-select-option>
+              <ion-select-option value="Providencia">Providencia</ion-select-option>
+              <ion-select-option value="Vitacura">Vitacura</ion-select-option>
+              <ion-select-option value="La Reina">La Reina</ion-select-option>
+              <ion-select-option value="Macul">Macul</ion-select-option>
+              <ion-select-option value="Conchalí">Conchalí</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>
+
+            <ion-label position="floating">Direccion</ion-label>
+            <ion-input [(ngModel)]="newPropiedad.direccion" placeholder="av. ejemplo" type="text" inputmode="text">
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Tipo</ion-label>
+            <ion-select [(ngModel)]="newPropiedad.tipo" label="Popover" interface="popover" placeholder="Casa/depto">
+              <ion-select-option value="casa">Casa</ion-select-option>
+              <ion-select-option value="depto">Departamento</ion-select-option>
+            </ion-select>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">numero</ion-label>
+            <ion-input [(ngModel)]="newPropiedad.numero" placeholder="1233" type="number" inputmode="numeric">
+            </ion-input>
           </ion-item>
 
-          
+          <ion-item>
+            <ion-label position="floating">contacto</ion-label>
+            <ion-input [(ngModel)]="newPropiedad.contacto" placeholder="persona ejemplo" type="text" inputmode="text">
+            </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label position="floating">Telefono</ion-label>
+            <ion-input [(ngModel)]="newPropiedad.telefono" placeholder="+569 000 000" type="tel"> </ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-label>
+              Foto
+            </ion-label>
+            <ion-buttons slot="end">
+              <ion-button>
+                <label for="file-upload">
+                  <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+                </label>
+                <input (change)="newImageUpload($event)" id="file-upload" style="display: none" type="file"
+                  accept="image/*">
+              </ion-button>
+            </ion-buttons>
+          </ion-item>
+          <ion-item>
+            <img [src]="newPropiedad.foto">
+          </ion-item>
+
+          <ion-button (click)="guardarPropiedad()" (click)="enableNewPropiedad = false " (click)="enablelista = true "
+            color="secondary" expand="block" shape="round">Guardar</ion-button>
+          <ion-button (click)="go()" color="secondary" expand="block" shape="round">Cuentas</ion-button>
+          <ion-button (click)="goto()" color="secondary" expand="block" shape="round">Estado</ion-button>
+        </div>
+        <!--listas de propiedades Cascada-->
+
+
+        <ion-accordion-group *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" lines="none">
+          <ion-accordion *ngFor="let P of Propiedades">
+            <ion-item slot="header" color="secondary">
+              <ion-col>
+                <ion-label>{{P.nombre}}</ion-label>
+
+              </ion-col>
+              <ion-col>
+                <ion-label>
+                  <ion-label>{{P.contacto}}</ion-label>
+                </ion-label>
+              </ion-col>
+            </ion-item>
+
+
             <ion-item class="ion-padding" slot="content">
               <ion-col>
-                
+
                 <ion-label>Direccion:</ion-label>
                 <ion-label>Numero:</ion-label>
                 <ion-label>Comuna:</ion-label>
                 <ion-label>Tipo:</ion-label>
                 <ion-label>Telefono:</ion-label>
               </ion-col>
-              <ion-col>     
+              <ion-col>
                 <ion-label>{{P.direccion}}</ion-label>
                 <ion-label>{{P.numero}}</ion-label>
                 <ion-label>{{P.comuna}}</ion-label>
                 <ion-label>{{P.tipo}}</ion-label>
                 <ion-label>{{P.telefono}}</ion-label>
               </ion-col>
-                  <ion-col>
-              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small">
-                <ion-icon  name="create-outline"></ion-icon>
-              </ion-button>
-              <ion-button    (click)="go()" color="secondary" size="small">
-                <ion-icon name="cash-outline"></ion-icon>
-              </ion-button>
-              <ion-button    (click)="deletePropiedad(P)" color="danger" size="small">
-                <ion-icon  name="trash-outline"></ion-icon>
-              </ion-button>
-               </ion-col>
+              <ion-col>
+                <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning"
+                  size="small">
+                  <ion-icon name="create-outline"></ion-icon>
+                </ion-button>
+                <ion-button (click)="go()" color="secondary" size="small">
+                  <ion-icon name="cash-outline"></ion-icon>
+                </ion-button>
+                <ion-button (click)="go()" color="secondary" size="small">
+                  <ion-icon name="archive-outline"></ion-icon>
+                </ion-button>
+                <ion-button (click)="deletePropiedad(P)" color="danger" size="small">
+                  <ion-icon name="trash-outline"></ion-icon>
+                </ion-button>
+              </ion-col>
             </ion-item>
-           
-         
-        </ion-accordion>
-      </ion-accordion-group>
-    
-    </ion-card-content>
-  </ion-card>
-</div>
+
+
+          </ion-accordion>
+        </ion-accordion-group>
+
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
