--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,13 +37,13 @@
     <div class="content_div">
       <div class="grid_box">
         <div class="box_div">
-          <ion-button (click)="gopropiedades()" color="secondary">Propiedades</ion-button>
+          <ion-button (click)="gopropiedades()">Propiedades</ion-button>
         </div>
         <div class="box_div">
-          <ion-button (click)="gocuentas()" color="secondary">Cuentas</ion-button>
+          <ion-button (click)="gocuentas()" >Cuentas</ion-button>
         </div>
         <div class="box_div">
-          <ion-button (click)="goestado()" color="secondary">Estado</ion-button>
+          <ion-button (click)="goestado()" >Estado</ion-button>
         </div>
       </div>
 
