--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 
     <ion-menu contentId="main" menuId="principal">
       <ion-header >
-        <ion-toolbar color="secondary">
+        <ion-toolbar >
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
