--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar  >
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
@@ -7,53 +7,124 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <!--FORMULARIO DE PERFIL-->
   <!--por revisar hacia abajo-->
   <div *ngIf="!uid.length" class="main_content_div">
 
     <ion-label class="bold_lbl">Bienvenido</ion-label>
-    <ion-label class="small_lbl">Ingresa tus datos</ion-label> 
-
-      <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.nombre"  placeholder="Nombre" type="text"><ion-icon name="person-circle"></ion-icon></ion-input>
-      <ion-input [(ngModel)]="cliente.email" placeholder="mail" type="text"> <ion-icon name="mail"></ion-icon></ion-input>
-      <ion-input [(ngModel)]="cliente.password" placeholder="Contraseña" type="text" ><ion-icon name="key"></ion-icon> </ion-input>
-      <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.confirmacion" placeholder="Confirmar Contraseña" type="text" ><ion-icon name="key"></ion-icon></ion-input>
-     
-     
-      <ion-button  *ngIf="ingresarEnable"  (click)="registrarse()"  expand="block" >registrar</ion-button> 
-      <ion-label  *ngIf="ingresarEnable" class="small_lbl">¿Ya tienes una cuenta?</ion-label> 
-      <ion-button  *ngIf="ingresarEnable"  (click)="ingresarEnable = false" expand="block" >Iniciar</ion-button>
-   
-    <ion-button  *ngIf="!ingresarEnable" (click)="ingresar()"  expand="block" >Iniciar</ion-button>
-    <ion-label  *ngIf="!ingresarEnable" class="small_lbl">¿no tienes una cuenta aun?</ion-label> 
-    <ion-button  *ngIf="!ingresarEnable" (click)="ingresarEnable = true" expand="block" >Registrate</ion-button>
-    
+    <ion-label class="small_lbl">Ingresa tus datos</ion-label>
 
 
-</div>
-<!--por revisar hacia arriba-->
-  <div *ngIf="uid.length" class="main_content_div">
-    <div> 
-          <div class="imgUser"> <img [src]="cliente.foto"></div>
-          <ion-label class="small_lbl">Nombre: {{cliente.nombre}}</ion-label>
-          <ion-label class="small_lbl">Correo: {{cliente.email}}</ion-label>
-          <ion-label class="small_lbl" >Editar Foto</ion-label>
-               <ion-buttons>
-               <ion-button >
-                 <label for="file-upload"><ion-icon slot="icon-only" name="images-outline"></ion-icon></label>
-                 <input (change)="newImageUpload($event)" id="file-upload"  type="file"  accept="image/*">
-              </ion-button>
-            </ion-buttons>
- 
+    <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.nombre" placeholder="Nombre" type="text"
+      [formControl]="nombreControl">
+      <ion-icon name="person-circle"></ion-icon>
+    </ion-input>
+    <div class="custom-background">
+      <ion-item *ngIf="nombreControl.invalid && (nombreControl.dirty || nombreControl.touched)">
+        <ion-icon name="alert-circle" slot="start"></ion-icon>
+        <ion-label class="error-label">
+          <ng-container *ngIf="nombreControl.hasError('required')">El nombre es obligatorio</ng-container>
+          <ng-container *ngIf="nombreControl.hasError('pattern')">Solo se permiten letras en el nombre</ng-container>
+        </ion-label>
+      </ion-item>
+    </div>
 
-        
-       
-     
-       <ion-button (click)="guardarUser()" expand="block">guardar</ion-button>
-   
-       <ion-button  (click)="salir()" expand="block">Cerrar cesion</ion-button>
+    <p></p>
+
+
+    <ion-input [(ngModel)]="cliente.email" placeholder="email" type="email" [formControl]="emailControl">
+      <ion-icon name="mail"></ion-icon>
+    </ion-input>
+
+    <div class="custom-background">
+      <ion-item *ngIf="emailControl.invalid && (emailControl.dirty || emailControl.touched)">
+        <ion-icon name="alert-circle" slot="start"></ion-icon>
+        <ion-label class="error-label">
+          <ng-container *ngIf="emailControl.hasError('required')">El correo electrónico es obligatorio</ng-container>
+          <ng-container *ngIf="emailControl.hasError('email')">Ingrese un correo electrónico válido</ng-container>
+        </ion-label>
+      </ion-item>
+    </div>
+
+
+    <p></p>
+
+
+    <ion-input [(ngModel)]="cliente.password" placeholder="Contraseña" type="password" value="password" id="password"
+      [formControl]="passwordControl">
+      <ion-icon name="key"></ion-icon>
+    </ion-input>
+    <div class="custom-background">
+      <ion-item *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)">
+        <ion-icon name="alert-circle" slot="start"></ion-icon>
+        <ion-label class="error-label">
+          <ng-container *ngIf="passwordControl.hasError('required')">La contraseña es obligatoria</ng-container>
+          <ng-container *ngIf="passwordControl.hasError('minlength')">La contraseña debe tener al menos 6 caracteres
+          </ng-container>
+          <ng-container *ngIf="passwordControl.hasError('pattern')">La contraseña debe contener al menos un carácter
+            especial</ng-container>
+        </ion-label>
+      </ion-item>
+    </div>
+
+    <p></p>
+
+
+    <ion-input *ngIf="ingresarEnable" [(ngModel)]="cliente.confirmacion" placeholder="Confirmar Contraseña" type="text">
+      <ion-icon name="key"></ion-icon>
+    </ion-input>
+    <div class="custom-background">
+      <ion-item *ngIf="CpasswordControl.invalid && (CpasswordControl.dirty || CpasswordControl.touched)">
+        <ion-icon name="alert-circle" slot="start"></ion-icon>
+        <ion-label class="error-label">
+          <ng-container *ngIf="CpasswordControl.hasError('required')">La contraseña es obligatoria</ng-container>
+          <ng-container *ngIf="CpasswordControl.hasError('minlength')">La contraseña debe tener al menos 6 caracteres
+          </ng-container>
+          <ng-container *ngIf="CpasswordControl.hasError('pattern')">La contraseña debe contener al menos un carácter
+            especial</ng-container>
+        </ion-label>
+      </ion-item>
+    </div>
+
+    <p></p>
+
+
+    <ion-button *ngIf="ingresarEnable" (click)="registrarse()" expand="block">registrar</ion-button>
+    <ion-label *ngIf="ingresarEnable" class="small_lbl">¿Ya tienes una cuenta?</ion-label>
+    <ion-button *ngIf="ingresarEnable" (click)="ingresarEnable = false" expand="block">Iniciar</ion-button>
+
+    <ion-button *ngIf="!ingresarEnable" (click)="ingresar()" expand="block">Iniciar</ion-button>
+    <ion-label *ngIf="!ingresarEnable" class="small_lbl">¿no tienes una cuenta aun?</ion-label>
+    <ion-button *ngIf="!ingresarEnable" (click)="ingresarEnable = true" expand="block">Registrate</ion-button>
+
+
 
   </div>
-</div>
+  <!--por revisar hacia arriba-->
+  <div *ngIf="uid.length" class="main_content_div">
+    <div>
+      <div class="imgUser"> <img [src]="cliente.foto"></div>
+      <ion-label class="small_lbl">Nombre: {{cliente.nombre}}</ion-label>
+      <ion-label class="small_lbl">Correo: {{cliente.email}}</ion-label>
+      <ion-label class="small_lbl">Editar Foto</ion-label>
+      <ion-buttons>
+        <ion-button>
+          <label for="file-upload">
+            <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+          </label>
+          <input (change)="newImageUpload($event)" id="file-upload" type="file" accept="image/*">
+        </ion-button>
+      </ion-buttons>
+
+
+
+
+
+      <ion-button (click)="guardarUser()" expand="block">guardar</ion-button>
+
+      <ion-button (click)="salir()" expand="block">Cerrar cesion</ion-button>
+
+    </div>
+  </div>
 </ion-content>
