--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -26,8 +26,8 @@
           <ion-input formControlName="telefono" type="tel" placeholder="+56 900000000"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="pass" type="password"></ion-input>
+          <ion-label position="floating" type="password">Contraseña</ion-label>
+          <ion-input formControlName="pass" type="password" value="password" label="Password input"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Confirmar contraseña</ion-label>
