--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,31 @@
         <ion-menu-toggle autoHide="false"> 
           <ion-item button="true" detail="true" [routerLink]="['/home']">
           <ion-label>Inicio</ion-label>
-          <ion-icon slot="start"  name="home"></ion-icon>
+          <ion-icon slot="start"  name="home-outline"></ion-icon>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle autoHide="false"> 
         <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
-        <ion-label>Editar propiedad</ion-label>
-        <ion-icon slot="start"  name="create"></ion-icon>
+        <ion-label>propiedades</ion-label>
+        <ion-icon slot="start"  name="create-outline"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle autoHide="false"> 
+        <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
+        <ion-label>Cuentas</ion-label>
+        <ion-icon slot="start"  name="cash-outline"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle autoHide="false"> 
+        <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
+        <ion-label>soporte</ion-label>
+        <ion-icon slot="start"  name="information-circle-outline"></ion-icon>
+        </ion-item>
+      </ion-menu-toggle>
+      <ion-menu-toggle autoHide="false"> 
+        <ion-item button="true" detail="true" [routerLink]="['/set-propiedad']">
+        <ion-label>salir</ion-label>
+        <ion-icon slot="start"  name="exit-outline"></ion-icon>
         </ion-item>
       </ion-menu-toggle>
       </ion-content>
